исправлен build.gradle для того чтобы он генерил дто и интерфейсы контроллеров и помечал папку как source
